[package]
name = "tft_stat"
version = "0.1.0"
authors = ["Justin Auger <justinauger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1"
futures = "0.3"
riven = "1.3.0"
tokio = { version = "0.2", features = ["macros", "time"]}
log = "*"
env_logger = "*"
anyhow = "1"
mongodb = "0.10"
bson = "*"
serde_json = "*"