[package]
name = "tft_stat"
version = "0.1.0"
authors = ["Justin Auger <justinauger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riven = "1.10.2"

futures = "0.3"
tokio = { version = "0.2", features = ["macros", "time"]}
log = "0.4"
env_logger = "0.8"
anyhow = "1"
mongodb = "1"
serde_json = "1"
chrono = "0.4"
